--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,45 @@
   <properties>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+
+  <!-- Add dependencies here -->
+  <dependencies>
+    <!-- JavaCV main library -->
+    <dependency>
+      <groupId>org.bytedeco</groupId>
+      <artifactId>javacv</artifactId>
+      <version>1.5.10</version>
+    </dependency>
+
+    <!-- OpenCV (with native binaries for all platforms) -->
+    <dependency>
+      <groupId>org.bytedeco</groupId>
+      <artifactId>opencv-platform</artifactId>
+      <version>4.10.0-1.5.10</version>
+    </dependency>
+
+    <!-- FFmpeg (with native binaries for all platforms) -->
+    <dependency>
+      <groupId>org.bytedeco</groupId>
+      <artifactId>ffmpeg-platform</artifactId>
+      <version>7.1-1.5.10</version>
+    </dependency>
+  </dependencies>
+
+  <!-- Optional: include if you want to use snapshot versions in the future -->
+  <!--
+  <repositories>
+    <repository>
+      <id>central-portal-snapshots</id>
+      <url>https://central.sonatype.com/repository/maven-snapshots/</url>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
+  -->
 
   <build>
     <plugins>
