--- a/pom.xml
+++ b/pom.xml
@@ -25,14 +25,14 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
-      <version>5.10.0</version>
+      <version>5.10.2</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
 
   <build>
     <plugins>
-      <!-- Compiler plugin -->
+     <!-- Compiler plugin -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -42,15 +42,19 @@
         </configuration>
       </plugin>
 
-      <!-- Exec plugin for running Java apps -->
+      <!-- Surefire plugin required for JUnit 5 -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.1.2</version>
+      </plugin>
+
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
         <version>3.2.0</version>
         <configuration>
-         <mainClass>io.github.arcjun01.centroid_finder.VideoExperiment</mainClass>
-
-        </configuration>
+          <mainClass>io.github.arcjun01.centroid_finder.VideoExperiment</mainClass>        </configuration>
       </plugin>
     </plugins>
   </build>
