--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
-      <version>5.10.0</version>
+      <version>5.10.2</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -42,15 +42,49 @@
         </configuration>
       </plugin>
 
-      <!-- Exec plugin for running Java apps -->
+      <!-- Surefire plugin (for running JUnit 5 tests) -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.1.2</version>
+      </plugin>
+
+      <!-- Exec plugin (lets you run app using mvn exec:java) -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
         <version>3.2.0</version>
         <configuration>
-         <mainClass>io.github.arcjun01.centroid_finder.VideoExperiment</mainClass>
-
+          <mainClass>io.github.arcjun01.centroid_finder.VideoExperiment</mainClass>
         </configuration>
+      </plugin>
+
+      <!-- Assembly plugin (creates runnable JAR with all dependencies) -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>3.6.0</version>
+        <configuration>
+          <archive>
+            <manifest>
+              <!-- Your program’s main class -->
+              <mainClass>io.github.arcjun01.centroid_finder.VideoExperiment</mainClass>
+            </manifest>
+          </archive>
+          <descriptorRefs>
+            <!-- Package all dependencies into one big runnable JAR -->
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
+        </configuration>
+        <executions>
+          <execution>
+            <id>make-assembly</id>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
